--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -30,7 +30,7 @@ short_bio: >-
     as well as being common in domestic longhair and domestic shorthair cats.
   </p>
 
-portrait_url: /assets/images/photos/IMG_3808_2.jpg.jpg
+portrait_url: /assets/images/photos/IMG_3808_2.jpg
 portrait_caption: >-
   Brian Selfie
 
