--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -11,8 +11,8 @@ positions:
 email: "zhengbr@cs.washington.edu"
 # cv_link: link-to-your-cv-file
 gscholar: KQemAJAAAAAJ  # This is an example, replace it with your own Google Scholar ID
-github: your_github_id
-twitter: your_twitter_id  # Do not include the '@' symbol
+github: Brianzhengca
+twitter: s_zhengbr  # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
@@ -33,16 +33,12 @@ portrait_caption: >-
   Brian Selfie
 
 education:
-- name: Massachusetts Institute of Technology
-  logo: /assets/images/badges/MIT_Social_circle.png
+- name: University of Washington
+  logo: /assets/images/badges/University_of_Washington_seal.svg.png
   position: >- 
-    Department of Electrical Engineering and Computer Science <br/>
-    Ph.D. Student
+    Paul G. Allen School of Computer Science and Engineering <br/>
+    Undergraduate Student
   date: Sep. 2024 - present
-- name: Peking University
-  logo: /assets/images/badges/PKU_red.png
-  position: B.S. in Computer Science
-  date: Sep. 2019 - Jul. 2021
 
 # experience:
 # - name: Peking University
@@ -51,9 +47,9 @@ education:
 #   date: Sep. 2019 - Jul. 2021
 
 awards:
-- name: Award Name 2
+- name: ICPC Pacific Northwest Regionals
   date: 2024
-- name: Award Name 1 
-  date: 2021
-- name: A quick brown fox jumps over the lazy dog and runs away award
-  date: 2021
+- name: Meta Hacker Cup Round 2 Qualifier
+  date: 2024
+- name: University of Washington Undergraduate Conference Travel Award
+  date: 2025
