--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -4,7 +4,7 @@ navbar_name: "Brian Zheng"
 
 positions:
 - logo: /assets/images/badges/University_of_Washington_seal.svg.png  # Logo is optional
-  name: Undergraduate Student
+  name: Undergraduate Student, UW CSE
 
 
 email: "zhengbr@cs.washington.edu"
