--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -24,7 +24,7 @@ short_bio: >-
     Hey there! My name is Brian and I am a second-year Computer Science undergrad at the University of Washington, where I am fortunate to work on research with <a href="https://nasmith.github.io/">Prof. Noah Smith</a>. I am broadly interested in natural language/music processing.
   </p>
   <p>
-    I was originally from Vancouver, Canada, and have lived in Toronto and Shanghai before moving to Seattle. When not doing research, you can find me cooking, playing badminton, or jogging along the Burke-Gilman trail. 
+    I was originally from Vancouver, Canada, and have spent time in Toronto and Shanghai before settling down in Seattle. When not doing research, you can find me cooking, playing badminton, or jogging along the Burke-Gilman trail. 
   </p>
 
 portrait_url: /assets/images/photos/IMG_3808_2.jpg
